# Z2

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .nixpacks.toml  .npmrc  .pre-commit-config.yaml  .railpacignore  .ruff.toml  .yamllint.yml  .yarnrc.yml  CONTRIBUTING.md  DEPLOYMENT_FIXES_SUMMARY.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.frontend.backup  IMPLEMENTATION_SUMMARY.md  MERGE_RESOLUTION_REPORT.md  MODEL_SPECIFICATIONS_UPDATE.md  RAILPACK_FIX.md  RAILWAY_BACKEND_QUICKFIX.md  RAILWAY_DEPLOYMENT.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_DEPLOYMENT_FIX_IMPLEMENTATION.md  RAILWAY_DEPLOYMENT_VALIDATION.md  RAILWAY_FIXES_COMPLETE.md  RAILWAY_FIX_SUMMARY.md  RAILWAY_MOUNT_PATH_FIX.md  RAILWAY_SERVICE_STATUS.md  RAILWAY_STORAGE_FIX.md  RAILWAY_YARN_CACHE_FIX.md  README-ANALYZER.md  README.md  backend_env_vars.txt  constraints.pro  docker-compose.monitoring.yml  docker-compose.yml  frontend_env_vars.txt  nginx.conf  (+13 more)
.husky/: pre-commit
.well-known/: agent.json
archive/: backend_env_vars.txt  phase8-demo.sh  railway.json  railway.toml.backup  railway.toml.backup-original
backend/: .bandit  .env.example  DEPLOYMENT.md  Procfile  RAILWAY_SETUP.md  RAILWAY_TROUBLESHOOTING.md  README.md  alembic.ini  heavy_analysis_demo.py  memory_graph_demo.py  nixpacks.toml  phase5_demonstration.py  project.json  pyproject.toml  quantum_demo.py  railpack.json  railway.json  railway.toml  requirements.txt  run_server.py  test.db  test_heavy_analysis_integration.py  test_manual_integration.py  test_maof_integration.py  test_memory_graph.py  test_memory_graph_integration.py  validate_implementation.py  verify_railway_config.sh
backend/app/: constants.py  main.py
backend/app/agents/: __init__.py  basic_agent.py  die.py  heavy_analysis_agent.py  ingestor_agent.py  maof.py  memory_graph.py  mil.py  planner_agent.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: a2a.py  activity.py  agents.py  api_keys.py  auth.py  consent.py  debug.py  health.py  heavy_analysis.py  mcp.py  memory_graph.py  models.py  quantum.py  users.py  workflows.py
backend/app/core/: __init__.py  auth_dependencies.py  cache_and_rate_limit.py  config.py  enhanced_prompts.py  error_handling.py  models_registry.py  route_validation.py  security.py  security.py.backup  storage_config.py
backend/app/database/: __init__.py  session.py  types.py
backend/app/models/: __init__.py  agent.py  api_key.py  consent.py  memory_graph.py  model_routing.py  quantum.py  role.py  session.py  user.py  workflow.py
backend/app/schemas/: __init__.py  quantum.py
backend/app/services/: __init__.py  api_key.py  consent_service.py  heavy_analysis.py  heavy_analysis_tools.py  memory_graph_service.py  model_routing.py  quantum_service.py  session_service.py
backend/app/utils/: __init__.py  contract_validator.py  error_handling.py  helpers.py  logging.py  monitoring.py  security.py
backend/migrations/: env.py
backend/migrations/versions/: 762c4b3ee5d9_initial_migration.py  7ff22b4ef3a3_add_model_routing_and_usage_tracking_.py  b32d1e47ba53_add_roles_permissions_and_refresh_.py  c7bb81d27d15_seed_default_roles_and_permissions.py  dcb2a6599f22_add_api_key_management_tables.py  f8a9c2d4e5b6_add_quantum_computing_models.py
backend/scripts/: create_superuser.py  init-backend.sh  init_db.py  storage_diagnostic.py  validate_contracts.py  validate_env.py  verify_superuser.py
backend/tests/: conftest.py  test_a2a.py  test_agent_execution.py  test_api_comprehensive.py  test_api_endpoints.py  test_auth_crud.py  test_auth_system.py  test_basic_agent.py  test_consent.py  test_contracts.py  test_core_services.py  test_cors_config.py  test_die.py  test_error_handling.py  test_helpers.py  test_integration.py  test_llm_integration.py  test_maof.py  test_mcp.py  test_memory_graph.py  test_mil.py  test_models_registry.py  test_observability.py  test_quantum.py  test_quantum_integration.py  test_schemas_and_logic.py  test_security.py  test_security_basic.py  test_security_utils.py  test_storage_config.py  test_user_endpoints.py  test_utils.py  utils.py
contracts/: IMPLEMENTATION_SUMMARY.md  README.md
docs/: AI_MODELS_MANIFEST.md  AUTHENTICATION.md  BUILDER_AGNOSTIC_GUIDE.md  CLEANUP_SUMMARY.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  CONTAINER_STARTUP_FIX.md  CONTRIBUTING.md  DEPLOYMENT_ARCHITECTURE.md  HEAVY_ANALYSIS_INTEGRATION.md  MONOREPO_TOOLING_CHEATSHEET.md  MONOREPO_TOOLING_RECOMMENDATIONS.md  OUTSTANDING_TASKS.md  PHASE5_COMPLETE.md  PROGRESS_REPORT_2025_01_08.md  RAILPACK_NODE22_FIX.md  RAILWAY_BACKEND_FIX.md  RAILWAY_CODING_RULES.md  RAILWAY_DEPLOYMENT_FIX.md  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_FINAL_STATUS.md  RAILWAY_RAILPACK_GUIDE.md  RAILWAY_SERVICE_OVERVIEW.md  RAILWAY_STORAGE_TROUBLESHOOTING.md  RAILWAY_YARN_MCP_MASTER_GUIDE.md  README.md  ROADMAP.md  ROADMAP_UPDATE_SUMMARY.md  SESSION_REPORT_2025_10_02.md  UPGRADE_REPORT_2024-12-19.md  cors-configuration-fix.md  product-requirement-document.md  quantum-computing-module.md  railway-config.md  railway-configuration-fix.md  railway-deployment-checklist.md  railway-environment-variables.md  railway-service-inspection-2025-10-11.md  railway-volume-mount-fix.md  specifications.md
frontend/: .env.example  .eslintrc.json  .gitignore  .npmrc  .railwayignore  .yarnrc.yml  .yarnrc.yml.backup  DOCKERFILE_REMOVED.md  Dockerfile  Dockerfile.backup  architecture-analysis.json  enhanced-architecture-analysis.json  eslint.config.js  index.html  nginx.conf  nginx.conf.template  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  project.json  railpack.json  railway.json  server.js  tsconfig.json  vite.config.ts  vitest.config.ts  yarn.lock.backup
load-tests/: locustfile.py  requirements.txt  run-load-test.sh
migration-scripts/: README.md  phase-1-feature-architecture.sh  phase-2-component-colocation.sh  phase-3-bundle-optimization.sh  validate-migration.sh
scripts/: README-validate-railway-backend.md  diagnose-build-env.sh  find-executable.sh  railway-build-simulation.sh  railway-debug.sh  railway-deployment-validation.sh  (+19 more)
(+184 files in other folders)
